<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4503A9F4"
    tools:context=".Producto1Main">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="184dp"
        android:layout_height="256dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:text="@string/nombreProducto"
            android:textColor="#E91E63"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewNombreP"
            android:layout_width="154dp"
            android:layout_height="41dp"
            android:textColor="#151515"
            android:textColorHint="#151515"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stockProducto"
            android:textColor="#E91E63"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvstock"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:textColor="#151515"
            android:textColorHint="#151515"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="221dp"
        android:layout_height="341dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:text="@string/codigoProducto"
            android:textColor="#E91E63"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewCodigoP"
            android:layout_width="159dp"
            android:layout_height="40dp"
            android:textColor="#151515"
            android:textColorHint="#151515"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precioUnitario"
            android:textColor="#E91E63"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewPUnitario"
            android:layout_width="157dp"
            android:layout_height="41dp"

            android:textColor="#151515"
            android:textColorHint="#151515"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:text="@string/costoProducto"
            android:textColor="#E91E63"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewCostoP"
            android:layout_width="157dp"
            android:layout_height="44dp"

            android:textColor="#151515"
            android:textColorHint="#151515"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewIDCategoria"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:textColor="#151515"
            android:textColorHint="#151515" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="410dp"
        android:layout_height="37dp"
        android:layout_marginTop="72dp"
        android:background="#2196F3"
        android:text="DATOS PRODUCTO:"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBusq" />

    <EditText
        android:id="@+id/editTextBusq"
        android:layout_width="165dp"
        android:layout_height="58dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="51dp"
        android:ems="10"
        android:hint="@string/idCliente"
        android:inputType="textPersonName"
        android:textColor="#0B0A0A"
        android:textColorHint="#020202"
        android:textSize="20sp"

        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="145dp"
        android:layout_height="98dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"

        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <CheckBox
            android:id="@+id/checkbox_Codigo"
            android:layout_width="117dp"
            android:layout_height="35dp"
            android:onClick="clickProducto"
            android:text="@string/checkCodigo"
            android:textColor="#0B0A0A"
            android:textColorHint="#0B0A0A"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/checkbox_Nombre"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:onClick="clickProducto"
            android:text="@string/checkNombre"
            android:textColor="#0B0A0A"
            android:textColorHint="#0B0A0A"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView9"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="415dp"
        android:layout_height="51dp"
        android:layout_marginTop="1dp"
        android:background="#2196F3"
        android:text="PRODUCTOS"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp" />


</androidx.constraintlayout.widget.ConstraintLayout>