<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4503A9F4"
    tools:context=".RegistrarseMain">

    <Button
        android:id="@+id/buttonGuardar"
        android:layout_width="274dp"
        android:layout_height="56dp"
        android:layout_marginStart="71dp"

        android:layout_marginTop="96dp"
        android:backgroundTint="#F44336"
        android:onClick="ClickInsertar"
        android:text="REGISTRAR.."
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextClave" />

    <TextView
        android:id="@+id/textView15"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="415dp"
        android:layout_height="51dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="15dp"
        android:background="#2196F3"
        android:text="REGISTRARSE"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextCedula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="48dp"
        android:digits="1234567890"
        android:drawableStart="@drawable/ic_baseline_perm_identity_24"
        android:ems="10"
        android:hint="@string/cedulaR"
        android:inputType="textPersonName"
        android:maxLength="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="16dp"
        android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ"
        android:drawableStart="@drawable/ic_baseline_assignment_24"
        android:ems="10"
        android:hint="@string/nombreR"
        android:inputType="textPersonName"
        android:maxLength="30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCedula" />

    <EditText
        android:id="@+id/editTextApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="16dp"
        android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ"
        android:drawableStart="@drawable/ic_baseline_assignment_24"
        android:ems="10"
        android:hint="@string/apellidoR"
        android:inputType="textPersonName"
        android:maxLength="30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombre" />

    <EditText
        android:id="@+id/editTextDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_baseline_cottage_24"
        android:ems="10"
        android:hint="@string/direccionR"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextApellido" />

    <EditText
        android:id="@+id/editTextClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_baseline_lock_open_24"
        android:ems="10"
        android:hint="@string/claveR"
        android:inputType="textPersonName"
        android:maxLength="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDireccion" />

</androidx.constraintlayout.widget.ConstraintLayout>