<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4503A9F4"
    tools:context=".ClienteMain">

    <EditText
        android:id="@+id/editTextBusqueda"
        android:layout_width="165dp"
        android:layout_height="58dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="51dp"
        android:ems="10"
        android:hint="@string/idCliente"
        android:inputType="textPersonName"
        android:onClick="ClickNombreCedula"
        android:textColor="#0B0A0A"
        android:textColorHint="#020202"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="415dp"
        android:layout_height="51dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="15dp"
        android:background="#2196F3"
        android:text="CLIENTES"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="404dp"
        android:layout_height="27dp"
        android:layout_marginBottom="10dp"
        android:background="#2196F3"
        android:text="DATOS CLIENTE:"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBusqueda" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="409dp"
        android:layout_height="144dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="2dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/direccionCliente"
            android:textColor="#E91E63"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewDireccion"
            android:layout_width="325dp"
            android:layout_height="49dp"

            android:textColor="#0B0A0A"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="164dp"
        android:layout_height="131dp"
        android:layout_marginStart="35dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="99dp"
            android:layout_height="37dp"
            android:text="@string/cedulaCliente"
            android:textColor="#E91E63"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewCedula"
            android:layout_width="159dp"
            android:layout_height="39dp"
            android:textColor="#0B0A0A"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:text="@string/apellidoCliente"
            android:textColor="#E91E63"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewApellido"
            android:layout_width="157dp"
            android:layout_height="41dp"

            android:textColor="#0B0A0A"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="212dp"
        android:layout_height="60dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:text="@string/nombreCliente"
            android:textColor="#E91E63"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewNombre"
            android:layout_width="193dp"
            android:layout_height="41dp"
            android:textColor="#0B0A0A"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="145dp"
        android:layout_height="98dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toEndOf="@+id/editTextBusqueda"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <CheckBox
            android:id="@+id/checkbox_Nombre"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:onClick="UtilizarCheck"
            android:text="@string/checkNombre"
            android:textColor="#0B0A0A"
            android:textColorHint="#0B0A0A"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkbox_Codigo"
            android:layout_width="117dp"
            android:layout_height="35dp"
            android:onClick="UtilizarCheck"
            android:text="@string/checkCedula"
            android:textColor="#0B0A0A"
            android:textColorHint="#0B0A0A"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>